compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/specialNames/instance.fir.kt
// COMPARE_WITH_LIGHT_TREE

object O {
    val INSTANCE: O = null!!
}

<!CONFLICTING_JVM_DECLARATIONS{LT}!><!CONFLICTING_JVM_DECLARATIONS{PSI}!>object O2<!> {
    <!CONFLICTING_JVM_DECLARATIONS!>lateinit var INSTANCE: O2<!>
}<!>
